Update i18n files. New Dutch tranlation from Loeki.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5473 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -44,6 +44,10 @@
 ##     Added key: 'title.add.contact.group'
 ##     Added key: 'message.add.contact.to.list'
 ##     Added key: 'title.add.contact'
+##     Added key: 'tab.conferences'
+##
+##
+##
 
 
 ok = Ok
@@ -308,7 +312,7 @@ message.user.granted.owner = {0} has been granted owner privileges.
 message.user.revoked.owner = Owner priviliges have been revoked for {0}.
 message.user.granted.admin = {0} has been granted administrator priviliges.
 message.user.revoked.admin = Administrator privileges have been revoked for {0}.
-message.user.nickname.changed = {0} is now knowns as {1}.
+message.user.nickname.changed = {0} is now known as {1}.
 message.your.kicked = You have been kicked by {0}.
 message.your.voice.revoked = You have been given a voice in this chat.
 message.your.voice.revoked = Your voice has been revoked.
