--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -45,8 +45,9 @@
 ##     Added key: 'message.add.contact.to.list'
 ##     Added key: 'title.add.contact'
 ##     Added key: 'tab.conferences'
-##
-##
+##     Added key: 'message.autenticating'
+##     Added key: 'title.file.transfer.preferences'
+##     Added key: 'menuitem.about'
 ##
 
 
@@ -394,6 +395,7 @@ message.restart.spark.to.install = You need to shut down the client to install l
 message.add.to.roster = Add To Roster
 message.enter.room.password = Enter Room Password
 message.add.contact.to.list = Add contact to contact list
+message.autenticating = Authenticating
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
@@ -492,6 +494,8 @@ title.download.complete = Download Complete
 title.new.roster.group = New Roster Group
 title.add.contact.group = Add Contact Group
 title.add.contact = Add Contact
+title.file.transfer.preferences = File Transfer Preferences
+title.file.transfer = File Transfer
 
 menuitem.contacts = Contacts
 menuitem.actions = Actions
@@ -575,6 +579,7 @@ tab.personal = Personal
 tab.business = Business
 tab.home = Home
 tab.avatar = Avatar
+tab.conferences = Conferences
 
 group.connection = Connection
 group.conferences.found = Conference Services Found
