Add validation for custom status messages.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5476 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -48,6 +48,7 @@
 ##     Added key: 'message.autenticating'
 ##     Added key: 'title.file.transfer.preferences'
 ##     Added key: 'menuitem.about'
+##     Added key: 'message.invalid.status'
 ##
 
 
@@ -396,6 +397,7 @@ message.add.to.roster = Add To Roster
 message.enter.room.password = Enter Room Password
 message.add.contact.to.list = Add contact to contact list
 message.autenticating = Authenticating
+message.invalid.status = Specify a valid status message.
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
