Updating Roster Dialog.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5502 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -49,8 +49,10 @@
 ##     Added key: 'title.file.transfer.preferences'
 ##     Added key: 'menuitem.about'
 ##     Added key: 'message.invalid.status'
-##
-
+##     Added key: 'message.cannot.add.contact.to.shared.group
+##     Added key: 'message.specify.contact.jid'
+##     Added key: 'message.invalid.jid.error'
+##     Added key: 'message.specify.group'
 
 ok = Ok
 cancel = Cancel
@@ -398,6 +400,14 @@ message.enter.room.password = Enter Room Password
 message.add.contact.to.list = Add contact to contact list
 message.autenticating = Authenticating
 message.invalid.status = Specify a valid status message.
+message.cannot.add.contact.to.shared.group = You cannot add new contacts to a Shared Group.
+message.specify.contact.jid = Please specify the contact JID (ex. ddman@jabber.org)
+message.invalid.jid.error = The JID specified is invalid.
+message.specify.group = Specify contact group to add the new user to.
+
+
+
+
 
 title.passwords.no.match = Confirm passwords.
 title.create.problem = Account Creation Problem
