SPARK-370  Added Sound Preference for incoming chat invitations
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5503 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -130,6 +130,7 @@ checkbox.window.to.front = &Bring window to front
 checkbox.play.sound.on.new.message = Play sound when new message &arrives
 checkbox.play.sound.when.offline = Play sound when user goes &offline
 checkbox.play.sound.on.outgoing.message = Play sound when message is &sent
+checkbox.play.sound.on.invitation = Play sound when &invitation is received
 checkbox.auto.login = &Auto Login
 checkbox.save.password = &Save Password
 checkbox.idle.enabled = &Idle Enabled
