--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -53,9 +53,11 @@
 ##     Added key: 'message.specify.contact.jid'
 ##     Added key: 'message.invalid.jid.error'
 ##     Added key: 'message.specify.group'
+##     Added key: 'add'
 
 ok = Ok
 cancel = Cancel
+add = Add
 use.default = Use Default
 close = Close
 create = Create
@@ -398,7 +400,7 @@ message.new.spark.available = {0} is now available. Would you like to install?
 message.restart.spark.to.install = You need to shut down the client to install latest version. Would you like to do that now?
 message.add.to.roster = Add To Roster
 message.enter.room.password = Enter Room Password
-message.add.contact.to.list = Add contact to contact list
+message.add.contact.to.list = Add a user to your contact list
 message.autenticating = Authenticating
 message.invalid.status = Specify a valid status message.
 message.cannot.add.contact.to.shared.group = You cannot add new contacts to a Shared Group.
