--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -103,7 +103,6 @@ button.refresh = &Refresh
 button.find = &Find
 button.update = &Update
 button.cancel = &Cancel
-button.accept = &Accept
 button.decline = &Decline
 button.join = &Join
 button.save.for.future.use = &Save for future use
@@ -114,8 +113,6 @@ button.search = &Search
 button.add.service = &Add Service
 button.quit = &Quit
 button.new = &New
-
-
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
@@ -133,8 +130,6 @@ checkbox.play.sound.on.new.message = Play sound when new message &arrives
 checkbox.play.sound.when.offline = Play sound when user goes &offline
 checkbox.play.sound.on.outgoing.message = Play sound when message is &sent
 checkbox.play.sound.on.invitation = Play sound when &invitation is received
-checkbox.auto.login = &Auto Login
-checkbox.save.password = &Save Password
 checkbox.idle.enabled = &Idle Enabled
 checkbox.launch.on.startup = &Launch on Startup
 checkbox.start.in.tray = &Start in System Tray
@@ -153,7 +148,6 @@ label.ok = OK
 label.cancel = Cancel
 label.use.default = Use Default
 label.port = &Port
-label.response.timeout = Response &Timeout
 label.auto.login = &Auto Login
 label.old.ssl = &Use OLD SSL port method
 label.host = &Host
@@ -165,7 +159,7 @@ label.transfer.timeout = &Transfer Timeout(min):
 label.transfer.download.directory = &Download Directory:
 label.find = &Find
 label.rename.to = Rename to
-label.contact.to.find = Contact To Find?
+label.contact.to.find = Find Contact
 label.available.users.in.roster =   &Available users in Roster
 label.time = Time: {0}
 label.add.conference.service = &Add Conference Service
@@ -177,7 +171,6 @@ label.new.nickname = New Nickname
 label.server.address = &Server Address
 label.nickname = &Nickname
 label.presence = &Presence
-label.message = &Message
 label.priority = P&riority
 label.enter.address = Enter Address
 label.jabber.address = &Jabber Address
@@ -321,7 +314,7 @@ message.user.granted.admin = {0} has been granted administrator priviliges.
 message.user.revoked.admin = Administrator privileges have been revoked for {0}.
 message.user.nickname.changed = {0} is now known as {1}.
 message.your.kicked = You have been kicked by {0}.
-message.your.voice.revoked = You have been given a voice in this chat.
+message.your.voice.granted = You have been given a voice in this chat.
 message.your.voice.revoked = Your voice has been revoked.
 message.your.banned = You have been banned from this room.
 message.your.membership.granted = You have been granted membership privileges.
@@ -425,7 +418,6 @@ title.error = Error
 title.status.message = Status Message
 title.spark.preferences = Spark Preferences
 title.alert = Alert
-title.broadcast.message = Broadcast Message
 title.tray.information = Tray Information
 title.select.file.to.send = Select File(s) To Send
 title.choose.directory = Choose Directory
@@ -481,7 +473,6 @@ title.dial.phone = Dial Phone
 title.history.for = Conversation History For {0}
 title.reminder = Reminder
 title.plugins = Plugins
-title.preferences = Preferences
 title.general.chat.settings = General Chat Settings
 title.chat = Chat
 title.notifications = Notifications
@@ -580,7 +571,6 @@ menuitem.edit.my.profile = &Edit My Profile...
 menuitem.lookup.profile = &Lookup Profile...
 menuitem.add.as.contact = Add as a contact
 menuitem.chat = Chat
-menuitem.view.profile = View Profile
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
