Update with new images.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5593 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_nl.properties
+++ b/src/resources/i18n/spark_i18n_nl.properties
@@ -4,12 +4,13 @@
 ## Dutch
 ## R. van Zantvoort, september 2006
 ##
-## Current version: 0.96 (build 5476 synced)
+## Current version: 0.97 (build 5531 synced)
 ##
 
 
 accept = Accepteer
 active = Actief
+add = Toevoegen 
 cancel = Annuleer
 close = Sluiten
 create = Aanmaken
@@ -32,7 +33,6 @@ subject = Onderwerp
 use.default = Standaardinstellingen
 yes = Ja
 
-button.accept = &Accepteren
 button.accept = &Accepteren
 button.add = &Toevoegen
 button.add.a.contact = &Contact toevoegen
@@ -67,8 +67,6 @@ button.save.for.future.use = &Opslaan voor later gebruik
 button.search = &Zoeken
 button.update = &Bijwerken
 
-#checkbox.auto.login = &Auto Login
-#checkbox.save.password = &Save Password
 checkbox.auto.discover.port = Ontdek server en poort &automatisch
 checkbox.auto.login = &Automatisch aanmelden
 checkbox.disable.chat.history = &Opslag van conversaties uitschakelen
@@ -76,6 +74,7 @@ checkbox.idle.enabled = &Inactiviteit aan
 checkbox.launch.on.startup = Start bij &opstarten
 checkbox.perform.spell.check = &Spellingscontrole op de achtergrond
 checkbox.permanent = &Permanente ruimte
+checkbox.play.sound.on.invitation = Geluid bij ontvangen &uitnodiging 
 checkbox.play.sound.on.new.message = Geluid bij &nieuw bericht
 checkbox.play.sound.on.outgoing.message = Geluid bij &verzenden bericht
 checkbox.play.sound.when.offline = Geluid bij &afmelden gebruiker
@@ -99,7 +98,7 @@ label.city = &Stad
 label.close = S&luiten
 label.company = &Bedrijf
 label.confirm.password = &Bevestig wachtwoord
-label.contact.to.find = Te zoeken contact:
+label.contact.to.find = Zoek contact
 label.country = &Land
 label.create.account = Maak &account aan
 label.department = &Afdeling
@@ -119,7 +118,6 @@ label.jid = &JID
 label.job.title = &Functie
 label.last.name = &Achternaam
 label.local.time = &Lokale tijd
-label.message = &Bericht
 label.message = &Bericht
 label.middle.name = &Tussenvoegsel
 label.minutes.before.stale.chat = &Minuten voor een inactieve ruimte bevriest
@@ -142,7 +140,6 @@ label.protocol = &Protocol
 label.receieved = &Ontvangen
 label.rename.to = Hernoemen naar
 label.resource = &Medium
-label.response.timeout = Ma&ximale antwoordtijd
 label.response.timeout = Maximale &antwoordtijd (sec)
 label.room = &Ruimte
 label.room.name = &Naam ruimte
@@ -168,7 +165,7 @@ message.account.created = Nieuwe account is aangemaakt.
 message.account.error = Geef de server waar de account op moet worden aangemaakt op.
 message.add.a.contact = Voeg contact toe.
 message.add.conference.service = Conferentiedienst toevoegen.
-message.add.contact.to.list = Voeg contact toe aan contactlijst
+message.add.contact.to.list = Voeg een gebruiker toe aan contactlijst
 message.add.favorite.room = Voeg ruimte toe aan de favorietenlijst of ga meteen naar binnen.
 message.add.this.user.to.your.roster = Add this user to your buddy list.
 message.add.to.roster = Aan contactlijst toevoegen
@@ -184,6 +181,7 @@ message.broadcast.to = Geef bericht om te versturen aan {0}
 message.broadcasted.to = Het bericht is verstuurd naar de volgende gebruikers:\n{0}
 message.calling = Belt {0}
 message.came.online = {0} is online gekomen op {1}
+message.cannot.add.contact.to.shared.group = Er kunnnen geen contacten worden toegevoegd aan gedeelde groepen. 
 message.chat.session.ended = Conversatie is geëindigd op {0}
 message.click.to.open = Klik om te openen
 message.client.information = Client informatie van {0}
@@ -231,6 +229,7 @@ message.generic.reconnect.message = De verbinding met de server is verbroken. Kl
 message.idle.for = Inactief voor {0}
 message.image.too.large = Dit bestand is te groot om te gebruiken. Bestand mag maximaal 16Kb zijn.
 message.invalid.jabber.id = Geen geldige Jabber ID
+message.invalid.jid.error = De opgegeven JID is ongeldig. 
 message.invalid.status = Geef een geldige statusmelding op.
 message.invite.users.to.conference = Nodig gebruikers uit in een conferentieruimte.
 message.is.shared.group = {0} is een gedeelde groep.
@@ -293,6 +292,8 @@ message.sent.offline.files = Offline bestand(en) ontvangen.
 message.service.already.exists = Dienst staat reeds in de lijst.
 message.shared.group = Gedeelde groep
 message.spark.secure = Spark draait in beveiligde modus.
+message.specify.contact.jid = Geef het JID van het contact op (bijv. ddman@jabber.org) 
+message.specify.group = Geef een groep voor de nieuwe gebruiker op. 
 message.specify.information.for.conference = Geef informatie voor de conferentieruimte.
 message.specify.name.error = Geef een geldige naam op.
 message.specify.users.to.join.conference = Geef gebruikers op die meedoen aan deze conferentie.
@@ -349,7 +350,7 @@ message.your.moderator.revoked = Moderatorrechten ingetrokken.
 message.your.ownership.granted = Eigenaarsrechten verkregen.
 message.your.ownership.revoked = Eigenaarsrechten ingetrokken.
 message.your.revoked.granted = Beheerdersrechten ingetrokken.
-message.your.voice.revoked = Stemrecht in deze conversatie gekregen.
+message.your.voice.granted = Stemrecht in deze conversatie gekregen.
 message.your.voice.revoked = Stemrecht in deze conversatie ingetrokken.
 
 title.account.create.registration = Accountregistratie
@@ -365,7 +366,6 @@ title.aim.registration = AIM Registratie
 title.alert = Waarschuwing
 title.available.transports = Beschikbare koppelingen
 title.broadcast.message = Bericht versturen
-title.broadcast.message = Verstuur bericht
 title.browse.conference.services = Conferentie diensten bladeren
 title.browse.room.service = Conferentieruimtes bladeren - {0}
 title.cancelled = Geannuleerd
@@ -424,7 +424,6 @@ title.password = Wachtwoord
 title.passwords.no.match = Controleer wachtwoorden
 title.person.search = Personen zoeken
 title.plugins = Plugins
-title.preferences = Voorkeuren
 title.preferences = Voorkeuren
 title.profile.information = Profielinformatie
 title.profile.not.found = Profiel niet gevonden
@@ -517,7 +516,6 @@ menuitem.view.client.version = Clientversie
 menuitem.view.contact.history = Geschiedenis bekijken
 menuitem.view.downloads = Gedownloade bestanden
 menuitem.view.last.activity = Laatste activiteit bekijken
-menuitem.view.profile = Bekijk profiel
 menuitem.view.profile = Profiel bekijken
 menuitem.view.room.info = Informatie ruimte bekijken
 menuitem.voice = Stemrecht
