Update project for tagging.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5809 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -54,6 +54,12 @@
 ##     Added key: 'message.invalid.jid.error'
 ##     Added key: 'message.specify.group'
 ##     Added key: 'add'
+##
+##
+##
+## 2.0.5
+##     Added key: 'Broadcast'
+##
 
 ok = Ok
 cancel = Cancel
@@ -79,6 +85,7 @@ not.registered = Not Registered
 save = Save
 yes = Yes
 no = No
+broadcast = Broadcast
 
 button.create.account = &Create Account
 button.close = C&lose
