--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -59,7 +59,7 @@
 ##
 ## 2.0.5
 ##     Added key: 'Broadcast'
-##
+##     Added key: 'label.user.on.public.network'
 
 ok = Ok
 cancel = Cancel
@@ -141,6 +141,7 @@ checkbox.idle.enabled = &Idle Enabled
 checkbox.launch.on.startup = &Launch on Startup
 checkbox.start.in.tray = &Start in System Tray
 
+label.user.on.public.network = User is on a public network
 label.change.password.to = &Change Password To
 label.username = &Username
 label.name = &Name
