--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -60,6 +60,7 @@
 ## 2.0.5
 ##     Added key: 'Broadcast'
 ##     Added key: 'label.user.on.public.network'
+##     Added key: 'label.network'
 
 ok = Ok
 cancel = Cancel
@@ -177,7 +178,7 @@ label.room = &Room
 label.invited.users = Invited Users
 label.new.nickname = New Nickname
 label.server.address = &Server Address
-label.nickname = &Nickname
+label.nickname = Ni&ckname
 label.presence = &Presence
 label.priority = P&riority
 label.enter.address = Enter Address
@@ -214,6 +215,7 @@ label.time.till.idle = &Time till Idle (min)
 label.jabber.id = &Jabber ID
 label.group = &Group
 label.enter.group.name = Enter new group name
+label.network = Networ&k
 
 
 message.username.error = Specify a username for the account.
