Updating to allow reconnection.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5907 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -233,8 +233,8 @@ message.supply.valid.timeout = Supply a valid time out value.
 message.supply.valid.port = Supply a valid port.
 message.supply.resource = Supply a valid resource.
 message.current.status = Let others know your current status or activity.
-message.disconnected.error = Your connection was closed due to an error.
-message.disconnected.conflict.error = Your connection was closed due to the same user logging in from another location.
+message.disconnected.error = Disconnected from the server
+message.disconnected.conflict.error = Disconnected from the server due to the same user logging in from another location.
 message.locked.workstation = User has locked their workstation.
 message.away.idle = Away due to idle.
 message.default.error = An error has been detected. Please report to support@jivesoftware.com.
