Updating to allow reconnection.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@5908 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -234,7 +234,7 @@ message.supply.valid.port = Supply a valid port.
 message.supply.resource = Supply a valid resource.
 message.current.status = Let others know your current status or activity.
 message.disconnected.error = Disconnected from the server
-message.disconnected.conflict.error = Disconnected from the server due to the same user logging in from another location.
+message.disconnected.conflict.error = User logged in from other location.
 message.locked.workstation = User has locked their workstation.
 message.away.idle = Away due to idle.
 message.default.error = An error has been detected. Please report to support@jivesoftware.com.
@@ -258,9 +258,9 @@ message.enter.broadcast.message = Enter message to broadcast to selected users.
 message.name.of.group = Name of Group
 message.approve.subscription = Allow {0} to add you to their roster?
 message.add.user = Add user to your roster?
-message.general.error = You have lost your connection to the server due to {0}.
+message.general.error = Disconnected from server due to {0}
 message.add.a.contact = Add a contact.
-message.generic.reconnect.message = You have lost your connection to the server. To login again, click on the Reconnect button below.
+message.generic.reconnect.message = Disconnected from the server
 message.select.one.or.more = Select one ore more users in your Roster.
 message.add.conference.service = Add a conference service.
 message.service.already.exists = Service is already in your service list.
