Update Theme work.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6187 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -61,6 +61,18 @@
 ##     Added key: 'Broadcast'
 ##     Added key: 'label.user.on.public.network'
 ##     Added key: 'label.network'
+##
+##
+## 2.0.6
+##     Added key: 'button.add.user'
+##     Added key: 'menuitem.sign.in'
+##     Added key: 'menuitem.sign.out'
+##     Added key: 'menuitem.sign.in.at.login'
+##     Added key: 'menuitem.enter.login.information'
+##     Added key: 'menuitem.delete.login.information'
+##     Added key: 'button.save'
+
+
 
 ok = Ok
 cancel = Cancel
@@ -121,6 +133,8 @@ button.search = &Search
 button.add.service = &Add Service
 button.quit = &Quit
 button.new = &New
+button.add.user = &Add User
+button.save = &Save
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
@@ -233,8 +247,8 @@ message.supply.valid.timeout = Supply a valid time out value.
 message.supply.valid.port = Supply a valid port.
 message.supply.resource = Supply a valid resource.
 message.current.status = Let others know your current status or activity.
-message.disconnected.error = Disconnected from the server
-message.disconnected.conflict.error = User logged in from other location.
+message.disconnected.error = Your connection was closed due to an error.
+message.disconnected.conflict.error = Your connection was closed due to the same user logging in from another location.
 message.locked.workstation = User has locked their workstation.
 message.away.idle = Away due to idle.
 message.default.error = An error has been detected. Please report to support@jivesoftware.com.
@@ -258,9 +272,9 @@ message.enter.broadcast.message = Enter message to broadcast to selected users.
 message.name.of.group = Name of Group
 message.approve.subscription = Allow {0} to add you to their roster?
 message.add.user = Add user to your roster?
-message.general.error = Disconnected from server due to {0}
+message.general.error = You have lost your connection to the server due to {0}.
 message.add.a.contact = Add a contact.
-message.generic.reconnect.message = Disconnected from the server
+message.generic.reconnect.message = You have lost your connection to the server. To login again, click on the Reconnect button below.
 message.select.one.or.more = Select one ore more users in your Roster.
 message.add.conference.service = Add a conference service.
 message.service.already.exists = Service is already in your service list.
@@ -359,14 +373,14 @@ message.unable.to.send.file = You were unable to send the file to {0}.
 message.sending.file.to = Sending file to {0}.
 message.you.have.sent = You have sent a file to {0}.
 message.file.transfer.rejected = The file transfer was not accepted by {0}.
-message.disable.transport = Would you like to disable this active transport?
+message.disable.transport = Remove login information from gateway?
 message.register.transports = Register with these available transports.
-message.enter.aim = Enter your AIM Screen Name and password below.
-message.enter.msn = Enter your MSN Screen Name and password below.
-message.enter.yahoo = Enter your Screen Name and password to connect to Yahoo.
-message.enter.icq = Enter your ICQ Screen Name and password below.
+message.enter.aim = Enter your AIM username and password below.
+message.enter.msn = Enter your MSN username and password below.
+message.enter.yahoo = Enter your username and password to connect to Yahoo.
+message.enter.icq = Enter your ICQ username and password below.
 message.username.password.error = Username and/or Password need to be supplied.
-message.registration.transport.failed = Unable to register with Transport.
+message.registration.transport.failed = Unable to register with gateway.
 message.client.information = Client information for {0}
 message.calling = Calling {0}
 message.number.to.call = Specify number to dial
@@ -466,13 +480,13 @@ title.start.chat = Start Chat
 title.view.bookmarks = View Bookmarks
 title.downloads = Downloads
 title.file.exists = File Exists
-title.disable.transport = Disable Transport
+title.disable.transport = Remove Login Information
 title.available.transports = Available Transports
 title.transports = Transports
-title.aim.registration = AIM Registration
-title.msn.registration = MSN Registration
-title.yahoo.registration = Yahoo Registration
-title.icq.registration = ICQ Registration
+title.aim.registration = AIM Account Credentials
+title.msn.registration = MSN Account Credentials
+title.yahoo.registration = Yahoo Account Credentials
+title.icq.registration = ICQ Account Credentials
 title.registration.error = Registration Error
 title.jabber.browser = Browser
 title.version.and.time = Version and Time
@@ -581,6 +595,11 @@ menuitem.edit.my.profile = &Edit My Profile...
 menuitem.lookup.profile = &Lookup Profile...
 menuitem.add.as.contact = Add as a contact
 menuitem.chat = Chat
+menuitem.sign.in = Sign in
+menuitem.sign.out = Sign out
+menuitem.sign.in.at.login = Sign in at login
+menuitem.enter.login.information = Enter login information
+menuitem.delete.login.information = Delete login information
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
