Added new ContactWindow handler.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6439 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -71,6 +71,12 @@
 ##     Added key: 'menuitem.enter.login.information'
 ##     Added key: 'menuitem.delete.login.information'
 ##     Added key: 'button.save'
+##
+##
+## 3.0.0
+##     Added key: 'button.start.chat'
+##     Added key: 'button.send.email'
+
 
 
 
@@ -135,6 +141,10 @@ button.quit = &Quit
 button.new = &New
 button.add.user = &Add User
 button.save = &Save
+button.start.chat = Start Chat
+button.send.email = Send Email
+
+
 
 checkbox.save.password = &Save Password
 checkbox.auto.login = &Auto Login
