Update i18 for chat name.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6462 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -141,8 +141,8 @@ button.quit = &Quit
 button.new = &New
 button.add.user = &Add User
 button.save = &Save
-button.start.chat = Start Chat
-button.send.email = Send Email
+button.start.chat = Chat
+button.send.email = Email
 
 
 
