Adding Docking Framework.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6742 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -143,6 +143,7 @@ button.add.user = &Add User
 button.save = &Save
 button.start.chat = Chat
 button.send.email = Email
+button.send = Send
 
 
 
@@ -165,6 +166,7 @@ checkbox.play.sound.on.invitation = Play sound when &invitation is received
 checkbox.idle.enabled = &Idle Enabled
 checkbox.launch.on.startup = &Launch on Startup
 checkbox.start.in.tray = &Start in System Tray
+checkbox.split.chat.window = Dock &Windows (Requires Spark restart)
 
 label.user.on.public.network = User is on a public network
 label.change.password.to = &Change Password To
@@ -264,7 +266,7 @@ message.away.idle = Away due to idle.
 message.default.error = An error has been detected. Please report to support@jivesoftware.com.
 message.new.message = New message from {0}.
 message.send.file.to.user = Send files to this user.
-message.send.picture = Send a picture of your desktop.
+message.send.picture = Capture and send anything you see on your screen.
 message.sent.offline.files = You have just been sent offline file(s).
 message.spark.secure = Spark is running in secure mode.
 message.search.for.contacts = Search for contacts.
