--- a/src/resources/i18n/spark_i18n_de_DE.properties
+++ b/src/resources/i18n/spark_i18n_de_DE.properties
@@ -144,6 +144,7 @@ checkbox.save.password = &Passwort speichern
 checkbox.idle.enabled = &Automatisches 'Away' bei Inaktivität aktivieren
 checkbox.launch.on.startup = &Spark bei Systemstart ausführen
 checkbox.start.in.tray = &Spark automatisch in der Taskleiste starten
+checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
 
 label.change.password.to = &Neues Passwort eingeben
 label.username = &Benutzername
