--- a/src/resources/i18n/spark_i18n_es.properties
+++ b/src/resources/i18n/spark_i18n_es.properties
@@ -79,6 +79,7 @@ checkbox.save.password = &Salvar Clave
 checkbox.idle.enabled = Activar Detecci\u00f3n Tiempo &Ocioso
 checkbox.launch.on.startup = &Iniciar luego de arranque
 checkbox.start.in.tray = &Iniciar en bandeja del sistema
+checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
 
 label.change.password.to = &Cambiar Clave A
 label.username = &Nombre de Usuario
