--- a/src/resources/i18n/spark_i18n_fr.properties
+++ b/src/resources/i18n/spark_i18n_fr.properties
@@ -57,6 +57,8 @@ checkbox.show.toaster = Afficher une notification &Popup
 checkbox.start.in.tray = &D\u00E9marrer dans la zone d'iconification
 checkbox.use.proxy.server = &Utiliser un Proxy
 checkbox.window.to.front = &Mettre la fen\u00EAtre en premier plan
+checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
+
 close = Fermer
 create = Cr\u00E9er
 date = Date
