--- a/src/resources/i18n/spark_i18n_it.properties
+++ b/src/resources/i18n/spark_i18n_it.properties
@@ -133,6 +133,7 @@ checkbox.play.sound.on.invitation = Esegui file audio alla &ricezione di un invi
 checkbox.idle.enabled = &Notifica Inattività
 checkbox.launch.on.startup = &Esegui all'avvio
 checkbox.start.in.tray = &Esegui Spark Minimizzato
+checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
 
 label.change.password.to = &Cambia Password
 label.username = &Nome Utente
