--- a/src/resources/i18n/spark_i18n_nl.properties
+++ b/src/resources/i18n/spark_i18n_nl.properties
@@ -86,6 +86,7 @@ checkbox.show.toaster = Toon een &toast popup
 checkbox.start.in.tray = Start in &systeemvak
 checkbox.use.proxy.server = Proxy &server gebruiken
 checkbox.window.to.front = &Breng venster naar voren
+checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
 
 label.accounts = &Accounts
 label.add.conference.service = &Conferentiedienst toevoegen
