--- a/src/resources/i18n/spark_i18n_pt_BR.properties
+++ b/src/resources/i18n/spark_i18n_pt_BR.properties
@@ -79,6 +79,7 @@ checkbox.save.password = &Salvar Senha
 checkbox.idle.enabled = &Ausente Habilidado
 checkbox.launch.on.startup = &Executar ao Iniciar
 checkbox.start.in.tray = &Iniciar na Bandeja
+checkbox.split.chat.window = PLEASE TRANSLATE: Dock &Windows (Requires Spark restart)
 
 label.change.password.to = &Trocar senha para
 label.username = &Usu\u00e1rio
