Switch over to using Available instead of online.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6792 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -73,10 +73,10 @@
 ##     Added key: 'button.save'
 ##
 ##
-## 3.0.0
+## 2.5
 ##     Added key: 'button.start.chat'
 ##     Added key: 'button.send.email'
-
+##     Added key: 'available'
 
 
 
@@ -105,6 +105,8 @@ save = Save
 yes = Yes
 no = No
 broadcast = Broadcast
+available = Available
+
 
 button.create.account = &Create Account
 button.close = C&lose
