Added preferences for tab position.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6850 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -77,6 +77,7 @@
 ##     Added key: 'button.start.chat'
 ##     Added key: 'button.send.email'
 ##     Added key: 'available'
+##     Added key: 'checkbox.tabs.on.top'
 
 
 
@@ -169,6 +170,8 @@ checkbox.idle.enabled = &Idle Enabled
 checkbox.launch.on.startup = &Launch on Startup
 checkbox.start.in.tray = &Start in System Tray
 checkbox.split.chat.window = Dock &Windows (Requires Spark restart)
+checkbox.tabs.on.top = &Chat tabs appear on top (Requires Spark restart)
+
 
 label.user.on.public.network = User is on a public network
 label.change.password.to = &Change Password To
