Added back online/offline notifications.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6915 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -78,7 +78,8 @@
 ##     Added key: 'button.send.email'
 ##     Added key: 'available'
 ##     Added key: 'checkbox.tabs.on.top'
-
+##     Added key: 'user.has.signed.in'
+##     Added key: 'user.has.signed.off'
 
 
 ok = Ok
@@ -107,6 +108,8 @@ yes = Yes
 no = No
 broadcast = Broadcast
 available = Available
+user.has.signed.in = has signed in.
+user.has.signed.off = has signed off.
 
 
 button.create.account = &Create Account
