Fix roster dialog.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@6965 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -80,6 +80,7 @@
 ##     Added key: 'checkbox.tabs.on.top'
 ##     Added key: 'user.has.signed.in'
 ##     Added key: 'user.has.signed.off'
+##     Added key: 'label.unable.to.add.contact'
 
 
 ok = Ok
@@ -250,6 +251,7 @@ label.jabber.id = &Jabber ID
 label.group = &Group
 label.enter.group.name = Enter new group name
 label.network = Networ&k
+label.unable.to.add.contact = Unable to add contact.
 
 
 message.username.error = Specify a username for the account.
