Added soft phone to core.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7135 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -81,6 +81,8 @@
 ##     Added key: 'user.has.signed.in'
 ##     Added key: 'user.has.signed.off'
 ##     Added key: 'label.unable.to.add.contact'
+##     Added key: 'label.conflict.error'
+##     Added key: 'message.room.creation.error'
 
 
 ok = Ok
@@ -252,6 +254,7 @@ label.group = &Group
 label.enter.group.name = Enter new group name
 label.network = Networ&k
 label.unable.to.add.contact = Unable to add contact.
+label.conflict.error = Unable to login due to account already signed in.
 
 
 message.username.error = Specify a username for the account.
@@ -446,9 +449,7 @@ message.cannot.add.contact.to.shared.group = You cannot add new contacts to a Sh
 message.specify.contact.jid = Please specify the contact JID (ex. ddman@jabber.org)
 message.invalid.jid.error = The JID specified is invalid.
 message.specify.group = Specify contact group to add the new user to.
-
-
-
+message.room.creation.error = The room could not be created.
 
 
 title.passwords.no.match = Confirm passwords.
