Allow users to disable buzz.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7324 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -83,6 +83,7 @@
 ##     Added key: 'label.unable.to.add.contact'
 ##     Added key: 'label.conflict.error'
 ##     Added key: 'message.room.creation.error'
+##     Added key: 'checkbox.allow.buzz'
 
 
 ok = Ok
@@ -177,6 +178,8 @@ checkbox.launch.on.startup = &Launch on Startup
 checkbox.start.in.tray = &Start in System Tray
 checkbox.split.chat.window = Dock &Windows (Requires Spark restart)
 checkbox.tabs.on.top = &Chat tabs appear on top (Requires Spark restart)
+checkbox.allow.buzz = Allow users to buz&z you.
+
 
 
 label.user.on.public.network = User is on a public network
@@ -255,7 +258,6 @@ label.enter.group.name = Enter new group name
 label.network = Networ&k
 label.unable.to.add.contact = Unable to add contact.
 label.conflict.error = Unable to login due to account already signed in.
-
 
 message.username.error = Specify a username for the account.
 message.password.error = Specify a password for this account.
