SPARK-565  	 Notify users that they must reconnect to the conference room.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@7325 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -84,6 +84,7 @@
 ##     Added key: 'label.conflict.error'
 ##     Added key: 'message.room.creation.error'
 ##     Added key: 'checkbox.allow.buzz'
+##     Added key: 'message.disconnected.group.chat.error'
 
 
 ok = Ok
@@ -275,6 +276,7 @@ message.supply.valid.port = Supply a valid port.
 message.supply.resource = Supply a valid resource.
 message.current.status = Let others know your current status or activity.
 message.disconnected.error = Your connection was closed due to an error.
+message.disconnected.group.chat.error = Your connection was closed due to an error. You will need to re-join this room after reconnecting.
 message.disconnected.conflict.error = Your connection was closed due to the same user logging in from another location.
 message.locked.workstation = User has locked their workstation.
 message.away.idle = Away due to idle.
