--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -85,6 +85,7 @@
 ##     Added key: 'message.room.creation.error'
 ##     Added key: 'checkbox.allow.buzz'
 ##     Added key: 'message.disconnected.group.chat.error'
+##     Added key: 'menuitem.show.offline.group'
 
 
 ok = Ok
@@ -627,6 +628,7 @@ menuitem.sign.out = Sign out
 menuitem.sign.in.at.login = Sign in at login
 menuitem.enter.login.information = Enter login information
 menuitem.delete.login.information = Delete login information
+menuitem.show.offline.group = Group offline users
 
 tree.conference.services = Conference Services
 tree.users.in.room = Users In Room
