--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -583,7 +583,7 @@ menuitem.edit = Edit
 menuitem.remove.from.roster = Remove from Roster
 menuitem.view.profile = View Profile
 menuitem.subscribe.to = Subscribe To
-menuitem.send.a.message = Send a Message...
+menuitem.send.a.message = Send broadcast to selected users...
 menuitem.show.empty.groups = Show Empty Groups
 menuitem.send.a.file = Send A File
 menuitem.view.last.activity = View Last Activity
